# grader

./: .gitignore  Makefile  grader.cabal  view.html
html/: view.html
shake/: Shake.hs
src/: Main.hs  Select.hs  TH.hs  Types.hs
